Hardcode event and org image width in CSS. On one occasion the 300px resized image turned out to be 301px. This prevents layout problems in that case.

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -344,6 +344,7 @@ table.times
     padding: 10px
     img
       border: 1px solid black
+      width: 300px
 
   .detail
     +float('left')
